update gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 /lib
 /resources
+/java
+/notes
+/1.4-analysis-of-algs
+
+*/.*
+
+*.iml
+*.txt
+*.png
+*.jar
+*.xml
+*.txt
+*.class
+*.zip
+
+CREDITS
